...

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLeave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAttendance">

        <androidx.constraintlayout.widget.ConstraintLayout
...

            <View
                android:id="@+id/viewBlueBar"
                android:layout_width="4dp"
                android:layout_height="0dp"
...

            <TextView
                android:id="@+id/textViewLeaveBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewAnnualLeaves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewMedicalLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewCompassionateLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewChildcareLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewAnnualBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewMedicalLeaveBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewCompassionateLeaveBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewChildcareLeaveBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewClaims"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

            <View
                android:id="@+id/viewBlueBar2"
                android:layout_width="4dp"
                android:layout_height="0dp"
...

            <TextView
                android:id="@+id/textViewClaims"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewMedicalClaims"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewTransportClaims"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewOtherClaims"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewMedicalClaimsAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewTransportClaimsAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewOtherClaimsAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

            <View
                android:id="@+id/viewRedBar"
                android:layout_width="4dp"
                android:layout_height="0dp"
...

            <TextView
                android:id="@+id/textViewAttendanceHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewSigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewAttendanceHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewAttendanceDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textViewCheckAttendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLocation" />

            <TextView
...

    <TextView
        android:id="@+id/textViewLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
