...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="Apply for Claim">


    <EditText
        android:id="@+id/editTextClaimAmountDialog"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginStart="31dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAmountToClaimDialog"
        app:layout_constraintStart_toEndOf="@+id/textViewAmountToClaimDialog"
        app:layout_constraintTop_toTopOf="@+id/textViewAmountToClaimDialog" />

    <EditText
        android:id="@+id/editTextClaimsReasonDialog"
        android:layout_width="157dp"
        android:layout_height="46dp"
        android:layout_marginStart="31dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewClaimReasonDialog"
        app:layout_constraintStart_toEndOf="@+id/textViewClaimReasonDialog"
        app:layout_constraintTop_toTopOf="@+id/textViewClaimReasonDialog" />

    <Spinner
        android:id="@+id/spinnerClaimTypesDialog"
        android:layout_width="154dp"
        android:layout_height="25dp"
        android:layout_marginStart="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewClaimTypeDialog"
        app:layout_constraintStart_toEndOf="@+id/textViewClaimTypeDialog"
        app:layout_constraintTop_toTopOf="@+id/textViewClaimTypeDialog" />

    <TextView
        android:id="@+id/textViewAmountLeftDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAmountBalanceDialog"
        app:layout_constraintStart_toEndOf="@+id/textViewAmountBalanceDialog"
        app:layout_constraintTop_toTopOf="@+id/textViewAmountBalanceDialog" />

    <Button
        android:id="@+id/buttonUploadDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:drawableBottom="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="@+id/buttonGalleryDialog"
        app:layout_constraintStart_toEndOf="@+id/textViewUploadDocDialog"
        app:layout_constraintTop_toTopOf="@+id/buttonGalleryDialog" />

    <TextView
        android:id="@+id/textViewAmountBalanceDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_marginTop="34dp"
        android:text="@string/reason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAmountToClaimDialog" />

    <TextView
        android:id="@+id/textViewClaimsFileURLDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/image_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadDialog" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClaimsSubmitDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/submit"
        android:text="@string/submit"
        app:layout_constraintStart_toEndOf="@+id/buttonClaimsClearDialog"
        app:layout_constraintTop_toBottomOf="@+id/textViewClaimsFileURLDialog" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClaimsClearDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:backgroundTint="@color/clear"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClaimsFileURLDialog" />

    <TextView
        android:id="@+id/textViewClaimsApplyTitle"
        android:layout_width="163dp"
        android:layout_height="26dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/apply_for_new_claim"
        android:textSize="16sp"
...
