...
    <string name="home_annual_leave_balance">5 days left</string>
    <string name="home_medical_leave_balance">0 days left</string>
    <string name="home_compassionate_leave_balance">3 days left</string>
    <string name="home_childcare_leave_balance">4 days left</string>
    <string name="home_medical_claim">Medical Balance:</string>
    <string name="home_transport_claim">Transport Balance:</string>
    <string name="home_others_claim">Others:</string>
    <string name="home_medical_amount">$500</string>
    <string name="home_transport_amount">$150</string>
    <string name="home_others_amount">$50</string>
    <string name="Logout"><u>Logout -></u></string>

    //Strings used in Attendance Fragment
...
    <string name="amount_to_claim">Amount to Claim</string>
    <string name="reason">Reason</string>
    <string name="upload_document">Upload Documents</string>
    <string name="claim_hint">Upload in .jpg</string>
    <string name="claim_summary">Claim Summary</string>
    <string name="apply_for_new_claim">Apply for new claim</string>
    <string name="medical">Medical</string>
    <string name="transport">Transport</string>
    <string name="others">Others</string>
    <string name="amount">Amount</string>


    <!-- Used in leave screens-->
    <string name="leaveSummary">Leave Summary</string>
...
    <string name="LeaveHeaderStart">Start Date</string>
    <string name="LeaveHeaderEnd">End Date</string>
    <string name="LeaveHeaderStatus">Status</string>
    <string name="image_preview">Image Preview</string>
    <string-array name="LeaveTypes">
        <item>Medical</item>
        <item>Annual</item>
        <item>Childcare</item>
        <item>Compassionate</item>
    </string-array>

    <string name="selected_item">Selected item:</string>

    <string-array name="ClaimTypes">
        <item>Medical</item>
...
